# upwork-proposal-assistant

./: .env.example  AGENTS.md  README.md  pyproject.toml
extension/: application_logger.js  background.js  content_script.js  dice_wizard_assistant.js  draft_panel.js  draft_sidepanel.html  indeed_smartapply_assistant.js  linkedin_easy_apply_assistant.js  manifest.json  options.html  popup.css  popup.html  popup.js  popup_router.js  sidepanel.css  sidepanel.html  sidepanel.js
extension/extractors/: indeed.js  linkedin.js
extension/ui/: content_scripts.js  cover_letter_runs.js  dice_cover_letter_runs.js  dice_posting_picker.js  posting_picker.js
schemas/: draft_response.schema.json
scripts/: check
src/job_application_draft_assistant/: api.py  cli.py  models.py  pdf_export.py
src/job_application_draft_assistant/applications/: dashboard.py
src/job_application_draft_assistant/context/: indexer.py  (+1 more)
src/upwork_proposal_assistant/: api.py  codex_provider.py  config.py  draft_pipeline.py  job_store.py  jobs.py  models.py  pdf_export.py  prompts.py  selector.py  storage.py
tests/: test_api_application_archive.py  test_api_lookup.py  test_application_dashboard.py  test_codex_provider.py  test_context_indexer.py  test_draft_pipeline.py  test_draft_view.py  test_extension_application_logging.py  test_extension_application_panel.py  test_extension_dice_panel.py  test_extension_draft_panel.py  test_extension_extraction_contracts.py  test_extension_source.py  test_job_store.py  test_models.py  test_pdf_export.py  test_prompts.py  test_selector.py  test_storage.py
(+2 files in other folders)
